# aoc2022

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  replit.nix
Day1/: Readme.md  solution.py
Day10/: Readme.md  solution_v1.py  solution_v2.py
Day11/: Readme.md  solution.py
Day12/: recursion_fail.py  sol_slower.py  solution.py
Day13/: Readme.md  solution.py
Day14/: solution.py
Day15/: Readme.md  solution.py
Day16/: Readme.md  solution.py
Day2/: Readme.md  solution.py
Day3/: Readme.md  solution.py
Day4/: Readme.md  solution.py
Day5/: Readme.md  solution.py
Day6/: Readme.md  input  sample  solution.py
Day7/: Readme.md  solution.py
Day8/: Readme.md  solution.py
Day9/: Readme.md  solution.py
helpers/: util.py
solutions/Day1/: solution.py
solutions/Day10/: solution_v1.py  solution_v2.py
solutions/Day11/: solution.py
solutions/Day12/: Readme.md  sol_slower.py  solution.py
solutions/Day13/: solution.py
solutions/Day14/: Readme.md  solution.py
solutions/Day15/: solution.py
solutions/Day16/: solution.py
solutions/Day2/: solution.py
solutions/Day3/: solution.py
solutions/Day4/: solution.py
solutions/Day5/: solution.py
solutions/Day6/: solution.py
solutions/Day7/: solution.py
solutions/Day8/: solution.py
solutions/Day9/: solution.py
solutions/helpers/: util.py
tests/: day10_test.py  day11_test.py  day12_test.py  day13_test.py  day14_test.py  day15_test.py  day16_test.py  day1_test.py  day2_test.py  day3_test.py  day4_test.py  day5_test.py  day6_test.py  day7_test.py  day8_test.py  day9_test.py
(+22 files in other folders)
