[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = "Advent of Code 2022"
authors = ["m4csz4f"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
